2011-04-20  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-nativeDrawInRect:...): Make the cache window
	large enough so that detail is preserved when drawing using a scale factor
	larger than 1. This change should only improve output quality but not
	affect image drawing otherwise.

2011-04-20  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBitmapImageRep+PNG.m: Read DPI metadata in PNG files
	and use this to set the point size of the image rep

2011-04-19  Eric Wasylishen  <ewasylishen@gmail.com>

	* ColorPickers/GSWheelColorPicker.m: Choose the color wheel bitmap size
	by converting the bounds rect to window base coordinates

2011-04-19  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSScreen.m: Read -userSpaceScaleFactor from the GSScaleFactor
	user default.
	* Source/GSWindowDecorationView.m: Apply -[NSScreen userSpaceScaleFactor]
	in +frameRectForContentRect and +contentRectForFrameRect, as well as
	setting a scaled bounds size in -layout.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSWindow.m: Remove unnecessary FIXMEs related to
	user space scale factor
	* Source/NSAppliation.m: Correct app icon sizing which was
	mixing up window frame coordinates and user space coordinates
	* Source/NSCachedImageRep.m: Add NSUnscaledWindowMask to the
	window used internally

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSScreen.m (-userSpaceScaleFactor):
	Temporarily fix the scale factor at 1.0 until the remaining parts
	of the high DPI patch are committed.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-compositeToPoint:fromRect:operation:fraction:):
	New simple implementation which calls
	-drawAtPoint:fromRect:operation:fraction:.
	Also respects the user space scale factor.
	* Source/NSImage.m (-guiDrawInRect:fromRect:operation:fraction):
	Remove a special case which called -compositeToPoint:..., which would
	cause an infinite loop when combined with the above change.
