@@ -1930,6 +1930,13 @@ _set_bit_value(unsigned char *base, long msb_off, int bit_width,
   [_properties setObject: [NSNumber numberWithFloat: _comp_factor]
                   forKey: NSImageCompressionFactor];
 
+  if (info->xdpi > 0 && info->ydpi > 0)
+    {
+      NSSize pointSize = NSMakeSize((info->width / info->xdpi) * 72.0,
+				    (info->height / info->ydpi) * 72.0);
+      [self setSize: pointSize];
+    }
+
   if (NSTiffRead(image, info, [self bitmapData]))
     {
       free(info);
